# gr-casper

./: CMakeLists.txt  MANIFEST.yml
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-casperConfig.cmake
docs/: CMakeLists.txt  README.casper
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: CMakeLists.txt
grc/: CMakeLists.txt  casper.workflow.yml  casper_adder.block.yml  casper_rfsoc4x2.block.yml  casper_swreg.block.yml
include/gnuradio/casper/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/casper/: CMakeLists.txt  __init__.py  adder.py  grc_workflows.py  rfsoc4x2.py  swreg.py
python/casper/bindings/: CMakeLists.txt  python_bindings.cc
